# redis-analyse

./: .gitignore
mysqla/docker/: .env  Makefile  docker-compose.yml
rds/: CMakeLists.txt  ae.h  server.c
redis-3.0/: Makefile
redis-3.0.0/: CMakeLists.txt
redis-3.0/src/: adlist.h  ae.c  ae.h  ae_epoll.c  anet.c  networking.c  redis.c  redis.h
redis-3.2/: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakelists.txt  Makefile  redis.cbp
redis-3.2/src/: ae_epoll.c  ae_kqueue.c  dict.c  sds.c  sds.h  server.c  zmalloc.c
redis-5.0/: CMakeLists.txt
redis-5.0.0/: CMakeLists.txt
redis-5.0.0/src/: ae_kqueue.c  atomicvar.h  server.c  server.h  zmalloc.c
redis-5.0.0/src/modules/: CMakeLists.txt
redis-5.0/src/: debug.c
redis-5.0/src/modules/: CMakeLists.txt
redis-6.2.14/: .gitignore  CMakeLists.txt
redis-6.2.14/src/: Makefile  ae.c  ae.h  ae_kqueue.c  anet.c  connection.c  connection.h  networking.c  sds.c  sds.h  server.c  server.h  zmalloc.c  zmalloc.h
redis-6.2.6/: CMakeLists.txt
redis3-analyse/src/: adlist.c  redis.h
redis3.0/: CMakeLists.txt
redis3.0/src/: ae_epoll.c
redis5-analyse/src/: server.c
